--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Web Của Cam Hưng</title>
 </head>
 <body>
-    FB : Cam Đại Hưng<br>
+    FB : <a href="https://www.facebook.com/profile.php?id=100072757594081">Cam Đại Hưng</a>
     Zalo :0354514832 <br>
     <input type="radio">Phát là gay
 </body>
