--- a/index.html
+++ b/index.html
@@ -1,13 +1,30 @@
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Web Của Cam Hưng</title>
+    <style>
+        body {
+            background-attachment: fixed;
+            background-image: url(https://media.istockphoto.com/vectors/cat-pattern-kitten-paw-background-vector-id1014177502) ;
+            background-size: 250px;
+        }
+        .box1 {
+            width: 300px;
+            height: 120px;
+            margin-left: 42% ;
+            background-image: linear-gradient(0,rgb(191, 25, 212),rgb(163, 224, 18)) ;
+            padding: 16px;
+            font-size: 30px;
+        }
+    </style>
 </head>
+
 <body>
-    FB : <a href="https://www.facebook.com/profile.php?id=100072757594081">Cam Đại Hưng</a>
-    Zalo :0354514832 <br>
-    <input type="radio">Phát là gay
-</body>
+    <div class="box box1">FB : <a href="https://www.facebook.com/profile.php?id=100072757594081">Cam Đại Hưng</a> <br>
+        Zalo : <a href="https://zalo.me/0354514832">Cam Hưng</a> <br>
+        <a href="https://www.facebook.com/nvp0612">link hot gái dâm</a> <br></div>
+
 </html>
