--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             margin-left: 42% ;
             background-image: linear-gradient(0,rgb(191, 25, 212),rgb(163, 224, 18)) ;
             padding: 16px;
-            font-size: 30px;
+            font-size: 50px;
         }
     </style>
 </head>
@@ -25,6 +25,6 @@
 <body>
     <div class="box box1">FB : <a href="https://www.facebook.com/profile.php?id=100072757594081">Cam Đại Hưng</a> <br>
         Zalo : <a href="https://zalo.me/0354514832">Cam Hưng</a> <br>
-        <a href="https://www.facebook.com/nvp0612">link hot gái dâm</a> <br></div>
+        <a href="https://www.facebook.com/phamle.kimanh.1">bồ tuiiiii</a> <br></div>
 
 </html>
